--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prismic-javascript": "^3.0.0",
     "prismic-reactjs": "^1.3.1",
     "react": "16.13.1",
+    "react-bootstrap": "^0.33.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
